--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,11 @@
-group 'edu.wpi.cs3733-d19.teamC' // replace with your package name
+group 'TeamC' // replace with your package name
 version '1.1'
 
 apply plugin: 'java'
 apply plugin: 'idea'
 apply plugin: 'application'
 
-mainClassName = "base.APIMain" // replace with your main class
+mainClassName = "TeamC.base.PrescitptionRequestAPI" // replace with your main class
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
