--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,11 @@
-group 'TeamC' // replace with your package name
+group 'TeamC.CS3733-D19-Team-C-JAR' // replace with your package name
 version '1.1'
 
 apply plugin: 'java'
 apply plugin: 'idea'
 apply plugin: 'application'
 
-mainClassName = "TeamC.base.PrescitptionRequestAPI" // replace with your main class
+mainClassName = "base.PrescitptionRequestAPI" // replace with your main class
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
